# robotdynid

./: .gitignore  README.md  TEMP_SYMBOLIC_PERFORMANCE_PLAN.md  __init__.py  pyproject.toml  requirements.txt
docs/: identification_optimization_theory.md
robotdynid/: __init__.py  assembly.py  workflow.py
robotdynid/codegen/: __init__.py  api_spec.py  c_codegen.py  cse_pipeline.py
robotdynid/core/: __init__.py  naming.py  params.py  robot_model.py
robotdynid/identify/: __init__.py  alternating_stribeck.py  csv_readers.py  dataset.py  linear_least_squares.py  preprocess.py
robotdynid/io/: __init__.py  inertia_mapping.py  urdf_loader.py
robotdynid/numeric/: __init__.py  base_selection.py  pinocchio_backend.py  regressor_evaluator.py  sampling.py
robotdynid/reporting/: __init__.py  artifacts.py  plots.py
robotdynid/symbolic/: __init__.py  base.py  evaluator.py  joint_dynamics.py  program.py  regressor.py  rne.py  simplify.py  spatial_math.py  symbols.py
scripts/: bootstrap_venv.sh
tests/: __init__.py  test_codegen.py  test_identify.py  test_numeric_regressor_evaluator.py  test_params_and_urdf.py  test_pipeline_and_io.py  test_sia_identification.py  test_symbolic_base_projection.py  test_symbolic_basics.py  test_symbolic_rne_vs_pinocchio.py
