[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robotdynid"
version = "0.1.0"
description = "Dynamic parameter identification for serial robots from URDF and motion data"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
  {name = "Betavion"}
]
dependencies = [
  "numpy>=2.3,<2.7",
  "scipy>=1.17",
  "sympy>=1.14",
  "pin==3.9.0",
  "pandas>=3.0",
  "matplotlib>=3.10"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["robotdynid*"]
