[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robotdynid"
version = "0.1.0"
description = "Dynamic parameter identification for serial robots from URDF and motion data"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MPL-2.0"}
authors = [
  {name = "Betavion"}
]
keywords = ["robotics", "dynamics", "identification", "urdf", "pinocchio", "symbolic"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "numpy>=2.3,<2.7",
  "scipy>=1.17",
  "sympy>=1.14",
  "pin==3.9.0",
  "pandas>=3.0",
  "matplotlib>=3.10"
]

[project.urls]
Homepage = "https://github.com/Betavion/robotdynid"
Repository = "https://github.com/Betavion/robotdynid"
Issues = "https://github.com/Betavion/robotdynid/issues"

[project.optional-dependencies]
dev = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["robotdynid*"]
